--- a/Home.css
+++ b/Home.css
@@ -14,6 +14,7 @@
   font-weight: 700;
   font-style: normal;
   width: 749px;
+  font-size: 3rem;
   margin: 73px auto 0;
 }
 
@@ -30,6 +31,7 @@
   letter-spacing: 1px;
   font-size: 1.25rem;
   background-image: none;
+  border-style: none;
   margin: 43px auto 60px;
   padding: 18px 43px 19px;
 }
@@ -72,6 +74,7 @@
 
   .u-section-1 .u-text-1 {
     width: 340px;
+    font-size: 1.5rem;
   }
 
   .u-section-1 .u-text-2 {
@@ -87,6 +90,7 @@
 
 .u-section-2 .u-text-1 {
   font-weight: 900;
+  font-size: 3rem;
   margin: 50px 20px 25px;
 }
 
@@ -100,133 +104,58 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 303px;
-}
-
-.u-section-3 .u-layout-wrap-1 {
-  width: 803px;
-  margin: 3px auto 0;
-}
-
-.u-section-3 .u-layout-cell-1 {
-  min-height: 50px;
-}
-
-.u-section-3 .u-container-layout-1 {
-  padding: 30px 30px 24px 0;
+  min-height: 314px;
 }
 
 .u-section-3 .u-text-1 {
   font-weight: 700;
-  margin: 0 71px 0 0;
-}
-
-.u-section-3 .u-layout-cell-2 {
-  min-height: 50px;
-}
-
-.u-section-3 .u-container-layout-2 {
-  padding: 30px 0 30px 30px;
+  margin: 30px 684px 0 169px;
 }
 
 .u-section-3 .u-text-2 {
-  font-size: 1.5rem;
-  margin: 0 0 0 auto;
-}
-
-.u-section-3 .u-text-3 {
   width: 803px;
   font-size: 1.25rem;
-  margin: 0 169px 50px;
+  margin: 28px auto 60px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 {
-    min-height: 758px;
-  }
-
-  .u-section-3 .u-sheet-1 {
-    min-height: 758px;
-  }
-
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-1 {
+    width: 803px;
     margin-left: 69px;
-    margin-right: 69px;
+    margin-right: 584px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 {
-    min-height: 783px;
-  }
-
-  .u-section-3 .u-sheet-1 {
-    min-height: 500px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    width: 720px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
   .u-section-3 .u-text-1 {
-    margin-right: 63px;
-  }
-
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-text-3 {
     width: 720px;
     margin-left: 0;
-    margin-right: 0;
+    margin-right: 433px;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 720px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 {
-    min-height: 883px;
-  }
-
-  .u-section-3 .u-sheet-1 {
-    min-height: 600px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    width: 540px;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-right: 10px;
-  }
-
   .u-section-3 .u-text-1 {
-    margin-right: 101px;
+    width: 540px;
+    margin-right: 253px;
   }
 
-  .u-section-3 .u-container-layout-2 {
-    padding-left: 10px;
-  }
-
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-2 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-layout-wrap-1 {
-    width: 340px;
-  }
-
   .u-section-3 .u-text-1 {
-    margin-right: 63px;
+    width: 340px;
+    margin-right: 53px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-2 {
     width: 340px;
   }
 }.u-section-4 {
@@ -341,6 +270,485 @@
   }
 
   .u-section-6 .u-text-2 {
+    width: 340px;
+  }
+}.u-section-7 {
+  background-image: none;
+}
+
+.u-section-7 .u-sheet-1 {
+  min-height: 132px;
+}
+
+.u-section-7 .u-text-1 {
+  font-weight: 900;
+  margin: 50px 20px 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}.u-section-8 {
+  background-image: none;
+}
+
+.u-section-8 .u-sheet-1 {
+  min-height: 737px;
+}
+
+.u-section-8 .u-text-1 {
+  font-weight: 700;
+  width: 803px;
+  margin: 30px auto 0;
+}
+
+.u-section-8 .u-text-2 {
+  width: 803px;
+  font-size: 1.25rem;
+  margin: 28px auto 0;
+}
+
+.u-section-8 .u-custom-html-1 {
+  min-height: 457px;
+  height: auto;
+  width: 803px;
+  margin: 30px auto 60px;
+}
+
+@media (max-width: 991px) {
+  .u-section-8 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 720px;
+  }
+
+  .u-section-8 .u-custom-html-1 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-8 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 540px;
+  }
+
+  .u-section-8 .u-custom-html-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-8 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 340px;
+  }
+
+  .u-section-8 .u-custom-html-1 {
+    width: 340px;
+  }
+}.u-section-9 {
+  background-image: none;
+}
+
+.u-section-9 .u-sheet-1 {
+  min-height: 737px;
+}
+
+.u-section-9 .u-text-1 {
+  font-weight: 700;
+  width: 803px;
+  margin: 30px auto 0;
+}
+
+.u-section-9 .u-text-2 {
+  width: 803px;
+  font-size: 1.25rem;
+  margin: 28px auto 0;
+}
+
+.u-section-9 .u-custom-html-1 {
+  min-height: 457px;
+  height: auto;
+  width: 800px;
+  margin: 30px auto 60px;
+}
+
+@media (max-width: 991px) {
+  .u-section-9 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 720px;
+  }
+
+  .u-section-9 .u-custom-html-1 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-9 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 540px;
+  }
+
+  .u-section-9 .u-custom-html-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 340px;
+  }
+
+  .u-section-9 .u-custom-html-1 {
+    width: 340px;
+  }
+}.u-section-10 {
+  background-image: none;
+}
+
+.u-section-10 .u-sheet-1 {
+  min-height: 132px;
+}
+
+.u-section-10 .u-text-1 {
+  font-weight: 900;
+  margin: 50px 20px 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-10 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}.u-section-11 {
+  background-image: none;
+}
+
+.u-section-11 .u-sheet-1 {
+  min-height: 276px;
+}
+
+.u-section-11 .u-text-1 {
+  font-weight: 700;
+  width: 803px;
+  margin: 30px auto 0;
+}
+
+.u-section-11 .u-text-2 {
+  font-size: 1.25rem;
+  width: 803px;
+  margin: 28px auto 50px;
+}
+
+@media (max-width: 991px) {
+  .u-section-11 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-11 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-11 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-11 .u-text-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-11 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-11 .u-text-2 {
+    width: 340px;
+  }
+}.u-section-12 {
+  background-image: none;
+}
+
+.u-section-12 .u-sheet-1 {
+  min-height: 132px;
+}
+
+.u-section-12 .u-text-1 {
+  font-weight: 900;
+  margin: 50px 20px 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-12 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}.u-section-13 {
+  background-image: none;
+}
+
+.u-section-13 .u-sheet-1 {
+  min-height: 224px;
+}
+
+.u-section-13 .u-text-1 {
+  font-weight: 700;
+  width: 803px;
+  margin: 30px auto 0;
+}
+
+.u-section-13 .u-text-2 {
+  width: 803px;
+  font-size: 1.25rem;
+  margin: 28px auto 30px;
+}
+
+@media (max-width: 991px) {
+  .u-section-13 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-13 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-13 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-13 .u-text-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-13 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-13 .u-text-2 {
+    width: 340px;
+  }
+}.u-section-14 {
+  background-image: none;
+}
+
+.u-section-14 .u-sheet-1 {
+  min-height: 208px;
+}
+
+.u-section-14 .u-text-1 {
+  font-weight: 700;
+  width: 803px;
+  margin: 30px auto 0;
+}
+
+.u-section-14 .u-text-2 {
+  width: 803px;
+  font-size: 1.25rem;
+  margin: 28px auto 50px;
+}
+
+@media (max-width: 991px) {
+  .u-section-14 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-14 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-14 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-14 .u-text-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-14 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-14 .u-text-2 {
+    width: 340px;
+  }
+}.u-section-15 {
+  background-image: none;
+}
+
+.u-section-15 .u-sheet-1 {
+  min-height: 132px;
+}
+
+.u-section-15 .u-text-1 {
+  font-weight: 900;
+  margin: 50px 20px 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-15 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}.u-section-16 .u-sheet-1 {
+  min-height: 416px;
+}
+
+.u-section-16 .u-layout-wrap-1 {
+  width: 774px;
+  margin: 30px auto 50px;
+}
+
+.u-section-16 .u-layout-cell-1 {
+  min-height: 346px;
+  background-image: none;
+}
+
+.u-section-16 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-16 .u-text-1 {
+  font-weight: 700;
+  background-image: none;
+  margin: 0 auto;
+}
+
+.u-section-16 .u-text-2 {
+  font-size: 1.25rem;
+  width: 148px;
+  margin: 20px auto 0;
+}
+
+.u-section-16 .u-layout-cell-2 {
+  min-height: 346px;
+  background-image: none;
+}
+
+.u-section-16 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-16 .u-text-3 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-16 .u-text-4 {
+  width: 159px;
+  margin: 20px auto 0;
+}
+
+.u-section-16 .u-layout-cell-3 {
+  min-height: 346px;
+  background-image: none;
+}
+
+.u-section-16 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-16 .u-text-5 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-16 .u-text-6 {
+  width: 107px;
+  margin: 20px auto 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-16 .u-sheet-1 {
+    min-height: 456px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-16 .u-sheet-1 {
+    min-height: 349px;
+  }
+
+  .u-section-16 .u-layout-wrap-1 {
+    width: 720px;
+  }
+
+  .u-section-16 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-16 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-16 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-16 .u-sheet-1 {
+    min-height: 262px;
+  }
+
+  .u-section-16 .u-layout-wrap-1 {
+    width: 540px;
+  }
+
+  .u-section-16 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-16 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-16 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-16 .u-sheet-1 {
+    min-height: 165px;
+  }
+
+  .u-section-16 .u-layout-wrap-1 {
     width: 340px;
   }
 }
