--- a/nicepage.css
+++ b/nicepage.css
@@ -31123,11 +31123,11 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 76px;
 }
 
 .u-header .u-menu-1 {
-  margin: 22px 0 22px auto;
+  margin: 22px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -31137,6 +31137,10 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-header .u-nav-2 {
   font-size: 1.25rem;
+}
+
+.u-header .u-text-1 {
+  margin: -32px auto 22px;
 }
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
